src/App.less
@fonts: 18px e('/') 1.5 'Open Sans', Arial, Helvetica, sans-serif;
@spacing: 10px;

@color-background: #8d9799;
@color-comment: #eee;
@color-primary: #6a9faa;
@color-secondary: #;
@color-text: #222;

.round-border(@radius) {
  -webkit-border-radius: @radius;
     -moz-border-radius: @radius;
      -ms-border-radius: @radius;
          border-radius: @radius;
}

.shadow(@spread, @blur, @color) {
  -webkit-box-shadow: 0px 0px @spread @blur @color;
     -moz-box-shadow: 0px 0px @spread @blur @color;
      -ms-box-shadow: 0px 0px @spread @blur @color;
          box-shadow: 0px 0px @spread @blur @color;
}

.transition(@trans) {
  -webkit-transition: @trans;
     -moz-transition: @trans;
       -o-transition: @trans;
          transition: @trans;
}

body {
  background-color: @color-background;
  padding: 20px;
}

.Thread {
  max-width: 700px;
  margin: auto;
  color: @color-text;
  background-color: @color-background * 0.75;
  .shadow(20px, 10px, rgba(0,0,0,.25));

  .Header {
    text-align: center;
    border: 1px solid black;
    border-bottom: none;
    margin-top: @spacing;
    color: @color-primary;
    background-color: @color-background * 0.25;
  }

  .Comment {
    display: flex;
    border: 1px solid black;
    box-sizing: border-box;
    margin-bottom: @spacing;
    padding: @spacing;
    background-color: @color-comment;

    .transition(background-color 0.5s ease);

    .Side {
      float: left;
      width: 64px;
      padding-right: 20px;

      img {
        width: 64px;
      }
    }

    .Content {
      float: left;
      flex-grow: 1;

      .User {
        color: @color-primary;
        float: left;
        font-weight: bold;
      }

      .Datetime {
        float: right;
        font-size: 80%;
        line-height: 1.5/.8;
        color: @color-text * 2.5;
        font-style: italic;
      }

      .CommentText {
        .ql-editor {
          padding: 0;
        }
      }

      .SubComments {
        margin-top: @spacing;
      }

      .Toolbar {
        width: 100%;
        margin-top: @spacing;
      }

      .ql-editor {
        font: @fonts;
      }
    }

    .Deleted {
      color: @color-text * 2.5;
      font-size: 80%;
      font-style: italic;
    }
  }

  .OuterComment {
    border: 1px solid @color-comment * .6;
  }

  .CommentEditor {
    .Button {
      margin-top: @spacing / 2;
    }
  }

  .HideToolbar {
    .Content {
      .Toolbar {
        display: none;
      }
    }
  }

  .NewComment {
    background-color: #cec;
  }

  .DeleteComment {
    background-color: #ecc;
  }
}

.Button {
  float: right;
  margin-left: @spacing;
  border: 1px solid @color-comment * .6;
  padding-left: @spacing/2;
  padding-right: @spacing/2;
  background-color: @color-comment * 1.2;
  cursor: pointer;
  cursor: hand;
  .transition(background-color 0.5s ease);

  i {
    margin-right: @spacing/2;
  }

  &:hover {
    background-color: @color-background;
  }
}

.DeleteCommentWarning {
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,.25);

  .Warning {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: #fff;
    text-align: center;
    width: 700px;
    margin: 0 auto;
    padding: @spacing;
    border: 1px solid black;
    box-sizing: border-box;
    .shadow(20px, 10px, rgba(0,0,0,.25));

    .Buttons {
      margin: 0 auto;
    }
  }
}

.FadeInOut-appear {
  opacity: 0.01;
}

.FadeInOut-appear.FadeInOut-appear-active {
  opacity: 1;
  transition: opacity 500ms ease;
}

.FadeInOut-enter {
  opacity: 0.01;
}

.FadeInOut-enter.FadeInOut-enter-active {
  opacity: 1;
  transition: opacity 500ms ease;
}

.FadeInOut-leave {
  opacity: 1;
}

.FadeInOut-leave.FadeInOut-leave-active {
  opacity: 0.01;
  transition: opacity 500ms ease;
}

@media only screen and (max-width: 500px) {
  .Thread {
    .Comment {
      display: block;

      .Side {
        float: none;
      }

      .Content {
        float: none;

        .User, .Datetime {
          float: none;
        }
      }
    }
  }

  .DeleteCommentWarning {
    .Warning {
      width: 100%;
    }
  }
}

